# rs_ws_poc

./: .gitignore  README.md
ping/: Cargo.toml  Rocket.toml
ping/src/: main.rs
store/: Cargo.toml  Rocket.toml
store/src/: db.rs  main.rs  model.rs
store/src/db/: Cargo.toml
store/src/db/src/: db.rs
